# ServerRMDI

./: CMakeLists.txt  main.cpp
Core/: GarbageCollector.cpp  GarbageCollector.h  MainServer.cpp  MainServer.h  ServerHA.cpp  ServerHA.h  memoryManager.cpp  memoryManager.h
Structures/: ClientList.cpp  ClientList.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  NodeClient.cpp  NodeClient.h  rmRef_h.cpp  rmRef_h.h
